# alko_parser

./: .env.template  .gitignore  Dockerfile  README.md  heroku.yml  pyproject.toml
alko_parser/: constants.py  recommendations.py  utils.py
app/: main.py
app/modules/: constants.py  recommendations.py  scraper.py  utils.py
app/modules/database/: constants.py  main.py  queries.py  utils.py
data/: alkon-hinnasto-tekstitiedostona.xlsx
tests/: test_alko_parser.py
