[tool.poetry]
name = "alko-parser"
version = "0.1.0"
description = ""
authors = ["Niko <nikokiril@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
requests = "^2.28.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
